--- a/public/test.html
+++ b/public/test.html
@@ -178,6 +178,13 @@ fetch(ENDPOINT + '?action=options')
       }
     });
 
+    // ✅ 为过滤器准备 ConsolePlatform 内容（来自 ConsolePlatformFilter 表）
+if (options.ConsolePlatformFilter) {
+  options.ConsolePlatform = options.ConsolePlatformFilter;
+}
+
+// 填充 filter-attribute 下拉
+
     const attrSel = document.getElementById("filter-attribute");
     attrSel.innerHTML = '';
     Object.keys(attributeLabels).forEach(key => {
