--- a/public/test.html
+++ b/public/test.html
@@ -59,7 +59,7 @@
   <h2>匿名时间轴编辑器（只读预览）</h2>
   <!-- 功能按钮 -->
   <button onclick="openAddEventForm()">➕ 增加事件</button>
-  <button onclick="document.getElementById('filter-window').style.display='block'">🔍 过滤标准（和逻辑）</button>
+  <button onclick="document.getElementById('filter-window').style.display='block'">🔍 过滤标准</button>
   <div id="timeline"></div>
 
   <!-- 新增事件表单 -->
