--- a/public/test.html
+++ b/public/test.html
@@ -11,45 +11,21 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/locale/zh-cn.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/choices.js/public/assets/scripts/choices.min.js"></script>
   <style>
-    /* 时间轴样式 */
-    #timeline {
-      width: 100%; height: 800px;
-      border: 1px solid lightgray;
-      position: relative;
-    }
-    /* 鼠标悬停的提示样式 */
+    #timeline { width: 100%; height: 800px; border: 1px solid lightgray; position: relative; }
     .vis-tooltip {
-      white-space: normal !important;
-      max-width: 700px !important;
-      min-width: 300px;
-      font-size: 10px;
-      line-height: 1.2;
-      padding: 12px;
-      background-color: #fff;
-      border: 1px solid #ccc;
-      box-shadow: 0 0 8px rgba(0, 0, 0, 0.2);
+      white-space: normal !important; max-width: 700px !important; min-width: 300px;
+      font-size: 10px; line-height: 1.2; padding: 12px; background-color: #fff;
+      border: 1px solid #ccc; box-shadow: 0 0 8px rgba(0, 0, 0, 0.2);
     }
-    /* 事件条样式 */
     .vis-item {
-      font-size: 10px;
-      padding: 1px 2px;
-      background-color: #f5f5f5;
-      border: 1px solid #aaa;
-      border-radius: 4px;
-      max-width: 300px;
+      font-size: 10px; padding: 1px 2px; background-color: #f5f5f5;
+      border: 1px solid #aaa; border-radius: 4px; max-width: 300px;
     }
-    /* 弹窗表单样式 */
     #event-form, #filter-window, #add-filter-window {
-      position: absolute;
-      top: 20px; left: 50%; transform: translateX(-50%);
-      background: #fff;
-      padding: 20px;
-      border: 1px solid #ccc;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.3);
-      display: none;
-      z-index: 2000;
-      max-height: 80vh;
-      overflow: auto;
+      position: absolute; top: 20px; left: 50%; transform: translateX(-50%);
+      background: #fff; padding: 20px; border: 1px solid #ccc;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.3); display: none;
+      z-index: 2000; max-height: 80vh; overflow: auto;
     }
     #add-filter-window { width: 700px; height: 300px; }
     #filter-window { width: 700px; }
@@ -57,31 +33,11 @@
 </head>
 <body>
   <h2>匿名时间轴编辑器（只读预览）</h2>
-  <!-- 功能按钮 -->
   <button onclick="openAddEventForm()">➕ 增加事件</button>
-  <button onclick="document.getElementById('filter-window').style.display='block'">🔍 过滤标准</button>
+  <button onclick="openFilterWindow('and')">🔍 过滤标准</button>
   <div id="timeline"></div>
 
-  <!-- 新增事件表单 -->
-  <div id="event-form">
-    <h3>新增事件</h3>
-    <label>事件名称（必填）：<input type="text" id="title"></label><br>
-    <label>事件类型（必填）：<select id="eventType"></select></label><br>
-    <label>开始时间（必填）：<input type="date" id="start"></label><br>
-    <label>结束时间：<input type="date" id="end"></label><br>
-    <label>地区（必填）：<select id="region"></select></label><br>
-    <label>平台类型：<select id="platform"></select></label><br>
-    <label id="consoleLabel" style="display:none">主机类型：<select id="console"></select></label><br>
-    <label>公司：<select id="company"></select></label><br>
-    <label>描述：<br><textarea id="description" rows="4" cols="40"></textarea></label><br>
-    <label>标签（多选）：<select id="tag" multiple></select></label><br>
-    <label>提交者昵称（选填）：<input type="text" id="submitter" maxlength="12" pattern="[\u4e00-\u9fa5\w]{0,12}" title="仅限中文、英文、数字，最多12字节"></label><br>
-    <button onclick="submitEvent()">提交</button>
-    <button onclick="document.getElementById('event-form').style.display='none'">关闭</button>
-  </div>
-
-  <!-- 过滤逻辑设置弹窗 -->
-<div id="filter-window">
+  <div id="filter-window">
     <h3>过滤标准（和逻辑）</h3>
     <button onclick="openAddFilter()">增加过滤标准</button>
     <button onclick="resetFilters()">复原过滤标准</button>
@@ -91,7 +47,6 @@
     <div id="current-filters"></div>
   </div>
 
-  <!-- 添加过滤标准弹窗 -->
   <div id="add-filter-window">
     <h3>新增过滤标准</h3>
     <label>过滤属性：<select id="filter-attribute"></select></label><br>
@@ -104,7 +59,6 @@
 const ENDPOINT = "https://script.google.com/macros/s/AKfycbxcv6GqP5USv3zOn2pepoT3mke2fdZuWsoInq6qkDx-2LUMBQTcJpahOtRqUHqBYMjs/exec";
 let allOptions = {}, activeFilters = {}, filterOptionsChoices, filterLogic = 'and';
 let originalItems = [], timeline = null;
-// 中文标签映射
 const attributeLabels = {
   EventType: "事件类型",
   Region: "地区",
@@ -114,9 +68,73 @@ const attributeLabels = {
   ConsolePlatform: "主机类型"
 };
 
-moment.locale("zh-cn");
+function openAddEventForm() {
+  document.getElementById('event-form').style.display = 'block';
+  document.getElementById('platform')?.dispatchEvent(new Event('change'));
+}
 
-  function passesAndLogicFilters(item, filters) {
+function openFilterWindow(logic) {
+  filterLogic = logic;
+  document.getElementById('filter-window').style.display = 'block';
+}
+
+function resetFilters() {
+  activeFilters = {};
+  updateFilterList();
+  updateTimelineByFilter();
+}
+
+function updateFilterList() {
+  const div = document.getElementById("current-filters");
+  div.innerHTML = '';
+  for (const [key, values] of Object.entries(activeFilters)) {
+    const d = document.createElement("div");
+    d.textContent = `${attributeLabels[key] || key}: ${values.join(', ')}`;
+    const btn = document.createElement("button");
+    btn.textContent = '❌';
+    btn.onclick = () => { delete activeFilters[key]; updateFilterList(); updateTimelineByFilter(); };
+    d.appendChild(btn);
+    div.appendChild(d);
+  }
+}
+
+function openAddFilter() {
+  document.getElementById("add-filter-window").style.display = 'block';
+  const attrSel = document.getElementById("filter-attribute");
+  attrSel.innerHTML = '';
+  Object.keys(attributeLabels).forEach(key => {
+    const o = document.createElement("option");
+    o.value = key;
+    o.textContent = attributeLabels[key];
+    attrSel.appendChild(o);
+  });
+  attrSel.onchange = () => {
+    const key = attrSel.value;
+    let opts = key === "ConsolePlatform" && allOptions.ConsolePlatformFilter ? allOptions.ConsolePlatformFilter : allOptions[key] || [];
+    const sel = document.getElementById("filter-options");
+    sel.innerHTML = '';
+    opts.forEach(opt => {
+      const o = document.createElement("option");
+      o.value = o.textContent = opt;
+      sel.appendChild(o);
+    });
+    if (filterOptionsChoices) filterOptionsChoices.destroy();
+    filterOptionsChoices = new Choices(sel, { removeItemButton: true });
+  };
+  attrSel.dispatchEvent(new Event("change"));
+}
+
+function confirmAddFilter() {
+  const attr = document.getElementById("filter-attribute").value;
+  const selected = Array.from(document.getElementById("filter-options").selectedOptions).map(o => o.value);
+  if (attr && selected.length) {
+    activeFilters[attr] = selected;
+    updateFilterList();
+  }
+  document.getElementById("add-filter-window").style.display = 'none';
+}
+
+function passesAndLogicFilters(item, filters) {
   return Object.entries(filters).every(([key, values]) => values.includes(item[key]));
 }
 
@@ -133,18 +151,25 @@ function updateTimelineByFilter() {
   });
   timeline.setItems(filtered);
 }
-// 加载时间轴数据
+
 fetch(ENDPOINT)
   .then(res => res.json())
   .then(data => {
-    const items = data.map((event, i) => ({
+    originalItems = data.map((event, i) => ({
       id: event.id || `auto-${i+1}`,
       content: event.content || '(无标题)',
       start: event.start,
       end: event.end || undefined,
-      title: (event.title || '').replace(/\n/g, '<br>')
+      title: (event.title || '').replace(/\n/g, '<br>'),
+      EventType: event.eventType,
+      Region: event.region,
+      Platform: event.platform,
+      Company: event.company,
+      Status: event.status,
+      ConsolePlatform: event.consolePlatform
     }));
-    new vis.Timeline(document.getElementById("timeline"), items, {
+
+    timeline = new vis.Timeline(document.getElementById("timeline"), originalItems, {
       locale: "zh-cn",
       editable: false,
       margin: { item: 10, axis: 50 },
@@ -155,144 +180,6 @@ fetch(ENDPOINT)
       stack: true
     });
   });
-
-// 加载选项（下拉）数据
-fetch(ENDPOINT + '?action=options')
-  .then(res => res.json())
-  .then(options => {
-    allOptions = options;
-    const fill = (id, list) => {
-      const select = document.getElementById(id);
-      if (!select) return;
-      select.innerHTML = '';
-      list.forEach(opt => {
-        const o = document.createElement('option');
-        o.value = o.textContent = opt;
-        select.appendChild(o);
-      });
-    };
-    fill("eventType", options.EventType);
-    fill("region", options.Region);
-    fill("platform", options.Platform);
-    fill("company", options.Company);
-    fill("tag", options.Tag);
-
-    new Choices('#tag', { removeItemButton: true });
-
-    document.getElementById("platform").addEventListener("change", function () {
-      const val = this.value;
-      const consoles = options.ConsolePlatform?.[val] || [];
-      const select = document.getElementById("console");
-      select.innerHTML = '';
-      if (consoles.length) {
-        document.getElementById("consoleLabel").style.display = 'inline';
-        consoles.forEach(c => {
-          const o = document.createElement("option");
-          o.value = o.textContent = c;
-          select.appendChild(o);
-        });
-      } else {
-        document.getElementById("consoleLabel").style.display = 'none';
-      }
-    });
-
-    const attrSel = document.getElementById("filter-attribute");
-    attrSel.innerHTML = '';
-    Object.keys(attributeLabels).forEach(key => {
-      const o = document.createElement("option");
-      o.value = key;
-      o.textContent = attributeLabels[key];
-      attrSel.appendChild(o);
-    });
-
-    attrSel.addEventListener("change", () => {
-      const key = attrSel.value;
-      let opts = [];
-      // ✅ 如果是 ConsolePlatform，使用 ConsolePlatformFilter 列表代替
-      if (key === "ConsolePlatform" && allOptions.ConsolePlatformFilter) {
-        opts = allOptions.ConsolePlatformFilter;
-      } else {
-        opts = allOptions[key] || [];
-      }
-      const sel = document.getElementById("filter-options");
-      sel.innerHTML = '';
-      opts.forEach(opt => {
-        const o = document.createElement("option");
-        o.value = o.textContent = opt;
-        sel.appendChild(o);
-      });
-      if (filterOptionsChoices) filterOptionsChoices.destroy();
-      filterOptionsChoices = new Choices(sel, { removeItemButton: true });
-    });
-    attrSel.dispatchEvent(new Event("change"));
-  });
-  
-function openAddEventForm() {
-  document.getElementById('event-form').style.display = 'block';
-  document.getElementById("platform").dispatchEvent(new Event("change"));
-}
-  
-function submitEvent() {
-  const tagList = Array.from(document.querySelector('#tag').selectedOptions).map(o => o.value);
-  const fd = new FormData();
-  fd.append("Title", title.value);
-  fd.append("Start", start.value);
-  fd.append("End", end.value);
-  fd.append("Region", region.value);
-  fd.append("Platform", platform.value);
-  fd.append("ConsolePlatform", document.getElementById("console").value);
-  fd.append("EventType", eventType.value);
-  fd.append("Company", company.value);
-  fd.append("Description", description.value);
-  fd.append("Submitter", submitter.value);
-  fd.append("Tag", tagList.join(","));
-
-  fetch(ENDPOINT, { method: "POST", body: fd })
-    .then(r => r.json())
-    .then(res => {
-      alert(res.message || "提交成功");
-      location.reload();
-    })
-    .catch(() => alert("提交失败，请检查网络"));
-}
-
-function openAddFilter() {
-  document.getElementById("add-filter-window").style.display = 'block';
-}
-
-function confirmAddFilter() {
-  const attr = document.getElementById("filter-attribute").value;
-  const selected = Array.from(document.getElementById("filter-options").selectedOptions).map(o => o.value);
-  if (attr && selected.length) {
-    activeFilters[attr] = selected;
-    updateFilterList();
-  }
-  document.getElementById("add-filter-window").style.display = 'none';
-}
-
-function resetFilters() {
-  activeFilters = {};
-  updateFilterList();
-}
-
-function updateFilterList() {
-  const div = document.getElementById("current-filters");
-  div.innerHTML = '';
-  for (const [key, values] of Object.entries(activeFilters)) {
-    const d = document.createElement("div");
-    d.textContent = `${attributeLabels[key] || key}: ${values.join(', ')}`;
-    const btn = document.createElement("button");
-    btn.textContent = '❌';
-    btn.onclick = () => { delete activeFilters[key]; updateFilterList(); };
-    d.appendChild(btn);
-    div.appendChild(d);
-  }
-}
-
-function applyFilters() {
-  console.log("应用过滤器：", activeFilters);
-  document.getElementById("filter-window").style.display = 'none';
-}
 </script>
 </body>
 </html>
